openshift/resources/vault/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: vault
  labels:
    name: vault
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: vault-cert
spec:
  type: ClusterIP
  selector:
    app: vault
    deploymentconfig: vault
  ports:
  - name: https
    port: 443
    targetPort: https
